styles/module.css
/* ... */
.chat-message[data-message-id].coffee-pub.round-cycling-cardsminimalred div.round-message {
    color: #EBE9E1 !important;
    background: #2D0607;
	border-left: 2px solid #771410;
    border-right: 2px solid #771410;
    border-top: 2px solid #771410;
    border-bottom: 2px solid #771410;
}

/* --- SIMPLE CARDS --- */
.chat-message[data-message-id].coffee-pub.round-cycling-cardssimple div.round-message {
    border-left: 2px solid #4b4a45;
    border-right: 2px solid #4b4a45;
    border-top: 2px solid #4b4a45;
    border-bottom: 2px solid #4b4a45;
}
/* --- DARK CARDS --- */
.chat-message[data-message-id].coffee-pub.round-cycling-cardsdark div.round-message {
    color: #EBE9E1 !important;
    background: #0F0F0F;
    border-left: 2px solid #4E4B4B;
    border-right: 2px solid #4E4B4B;
    border-top: 2px solid #4E4B4B;
    border-bottom: 2px solid #4E4B4B;
}
/* --- RED CARDS --- */
.chat-message[data-message-id].coffee-pub.round-cycling-cardsred div.round-message {
    color: #EBE9E1 !important;
    background: #2D0607;
    border-left: 2px solid #771410;
    border-right: 2px solid #771410;
    border-top: 2px solid #771410;
    border-bottom: 2px solid #771410;
}
/* --- GREEN CARDS --- */
.chat-message[data-message-id].coffee-pub.round-cycling-cardsgreen div.round-message {
    color: #EBE9E1 !important;
    background: #525F1F;
    border-left: 2px solid #798740;
    border-right: 2px solid #798740;
    border-top: 2px solid #798740;
    border-bottom: 2px solid #798740;
}

/* ******************************************** */
/* *****     MISSED TURN CARDS            ***** */
/* ******************************************** */

.chat-message[data-message-id].coffee-pub.missed-crier {
	display: block;
    background-color: #F3F1E9;
    border: 2px solid rgb(185, 121, 0);
    padding-top: 8px;
	padding-bottom: 8px;
	padding-left: 30px;
	padding-right: 8px;
	animation-name: missed-pulse-color;
    animation-duration: 1s;
    animation-iteration-count: 10;
    animation-fill-mode: forwards;
}
@keyframes missed-pulse-color {
	0% {
		background: rgb(119, 78, 16);
	}

	50% {
		background: rgb(102, 61, 0);
	}

	100% {
		background: rgb(119, 78, 16);
	}
}
.chat-message[data-message-id].coffee-pub.missed-crier .missed-token {
    color: #ffffff;
    text-align: left;
    font-size: 1.0em;
}
span.missed-combatant {
    font-weight:550;
    font-size: 0.9em;
    font-style: normal;
    text-transform: uppercase;
}
span.missed-turn-text {
	font-weight:100;
    font-size: 0.9em;
}
.missed-turn-icon {
	color: rgb(255, 166, 0);
	font-weight: 550;
	margin-right: 4px;
	margin-left: -20px;
}
/*  delete button */
.chat-message[data-message-id].coffee-pub.missed-crier .message-metadata {
    flex: 0;
	display: block;
	color: rgb(255, 166, 0);
	font-size: 0.9em;
	font-weight: 500;
	margin-right: 0px;
	margin-left: 0px;
}

/* ******************************************** */
/* *****           TURN CARDS             ***** */
/* ******************************************** */

/* ------------------------------------------ */
/* -----          COLORED CARDS         ----- */
/* ------------------------------------------ */

/* ----- Set the style and shape ----- */

/* Wrapper */
#crier-cards-wrapper-cardsgreen,
#crier-cards-wrapper-cardsblue,
#crier-cards-wrapper-cardsdark,
#crier-cards-wrapper-cardsred {
    font-size: 1.0em;
    font-style: normal;
    border-radius: 5px 5px 5px 5px;
    padding-top: 8px;
    padding-bottom: 8px;
    padding-left: 5px;
    padding-right: 5px;
    margin-top: var(--intCardMarginTop);
    margin-bottom: var(--intCardMarginBottom);
    margin-left: var(--intCardMarginLeft);
    margin-right: var(--intCardMarginRight);
}
/* Icon */
#crier-cards-icon-cardsgreen,
#crier-cards-icon-cardsblue,
#crier-cards-icon-cardsdark,
#crier-cards-icon-cardsred {
	font-weight:550;
    font-size: 1.0em;
	margin-top: 0px;
	margin-bottom: 0px;
	margin-left: 0px;
	margin-right: 5px;
	padding-top: 0px;
    padding-bottom: 0px;
    padding-left: 0px;
    padding-right: 0px;
}
/* Title */
#crier-cards-title-cardsgreen,
#crier-cards-title-cardsblue,
#crier-cards-title-cardsdark,
#crier-cards-title-cardsred {
    border-radius: 4px 4px 4px 4px;
	padding-top: 5px;
    padding-bottom: 5px;
    padding-left: 10px;
    padding-right: 10px;
    margin-top: 0px;
    margin-bottom: 0px;
    margin-left: 0px;
    margin-right: 0px;
}
/* Description / Player */
#crier-cards-description-cardsgreen,
#crier-cards-description-cardsblue,
#crier-cards-description-cardsdark,
#crier-cards-description-cardsred {
    border-radius: 4px 4px 4px 4px;
	padding-top: 5px;
    padding-bottom: 5px;
    padding-left: 10px;
    padding-right: 10px;
    margin-top: 10px;
    margin-bottom: 0px;
    margin-left: 0px;
    margin-right: 0px;
}
/* Content */
#crier-cards-content-cardsgreen,
#crier-cards-content-cardsblue,
#crier-cards-content-cardsdark,
#crier-cards-content-cardsred {

    border-radius: 5px 5px 5px 5px;
	padding-top: 0px;
    padding-bottom: 0px;
    padding-left: 0px;
    padding-right: 0px;
    margin-top: 10px;
    margin-bottom: 0px;
    margin-left: 0px;
    margin-right: 0px;
}
/* Image */
#crier-cards-wrapper-cardsgreen img,
#crier-cards-wrapper-cardsblue img,
#crier-cards-wrapper-cardsdark img,
#crier-cards-wrapper-cardsred img {
    /* width: 100% !important; */
    border-radius: 4px 4px 4px 4px !important;
    display: block;
    margin-left: auto;
    margin-right: auto;
    margin-top: 0px;
    margin-bottom: -4px;
    padding-top: 0px;
    padding-bottom: 0px;
    padding-left: 0px;
    padding-right: 0px;
}
/* Portrait Overlay */
.image-stack {
    display: grid;
    grid-template-columns: repeat(1, 1fr);
    position: relative;
}
.image-stack__item--bottom {
    grid-column: 1 / span 1;
    grid-row: 1; /*  must be on the same row as the other image */
    z-index: 1; /*  make this image render on top of the bottom */
}
/* ... */

